<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RouteActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:orientation="horizontal"
        android:weightSum="3" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/bno"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/etBNo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_weight="2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:orientation="horizontal"
        android:weightSum="3" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/etSource"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/etSource"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_weight="2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:orientation="horizontal"
        android:weightSum="3" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/etDestination"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/etDestination"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_weight="2" />

    </LinearLayout>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:background="#000000"
        android:gravity="center"
        android:alpha="0.5"
        android:text="@string/tvList"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/lvRoute"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:listSelector="@android:color/transparent" />
    
    <com.google.ads.AdView android:id="@+id/avRoute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        ads:adUnitId="a152875a56b4164"
        ads:adSize="BANNER"
        ads:loadAdOnCreate="true" />

</LinearLayout>
